--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14700,3 +14700,7 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
       color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
+label.error {
+    color: red !important;
+    display: block;
+}
