--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14704,3 +14704,42 @@ label.error {
     color: red !important;
     display: block;
 }
+.loader {
+    position: absolute;
+    border: 10px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 10px solid #3498db;
+    width: 70px;
+    height: 70px;
+    /*left:50%;*/
+    /*top:50%;*/
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+}
+#overlay{
+    position: fixed;
+    top:0px;
+    left:0px;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: .5;
+    z-index: 9999999999999999999999999;
+}
+.container{
+    position:relative;
+    height: 300px;
+    width: 200px;
+    border:1px solid
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
