--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1360,7 +1360,7 @@ pre {
 @media (max-width: 575.98px) {
   .table-responsive-sm {
     display: block;
-    width: 100%;
+    width: 60%;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
@@ -14711,8 +14711,8 @@ label.error {
     border-top: 10px solid #3498db;
     width: 70px;
     height: 70px;
-    /*left:50%;*/
-    /*top:50%;*/
+    left:50%;
+    top:50%;
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
 }
